# MMQ

./: .clang-format  CMakeLists.txt  build.sh
cmake/: spdlog.cmake
src/: main.cc
src/common/: constants.h  log.cc  log.h
